parser/testdata/snapshots/parser_test__TestParseImportSpec.snap
---
source: /home/labatata/Code/Go/GoParser/parser/parser_test.go
assertion_line: 31
---
ast.File{
  Doc: nil,
  Package: 0,
  Name: &ast.Ident{
    NamePos: 8,
    Name: "foo",
    Obj: nil,
  },
  Decls: []ast.Decl{
    &ast.GenDecl{
      Doc: nil,
      TokPos: 12,
      Tok: 75,
      Lparen: 0,
      Specs: []ast.Spec{
        &ast.ImportSpec{ // p0
          Doc: nil,
          Name: nil,
          Path: &ast.BasicLit{
            ValuePos: 19,
            Kind: 9,
            Value: "\"fmt\"",
          },
          Comment: nil,
          EndPos: 24,
        },
      },
      Rparen: 0,
    },
  },
  FileStart: 0,
  FileEnd: 24,
  Scope: nil,
  Imports: []*ast.ImportSpec{
    p0,
  },
  Unresolved: nil,
  Comments: nil,
  GoVersion: "",
}
